Tue Apr 04 01:05:41 BST 2006  Olly Betts <olly@survex.com>

	* common/omenquireinternal.h: sort_key no longer needs to be mutable
	  now that MSetSortCmp has been removed.

Mon Apr 03 02:03:12 BST 2006  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Removed dead code (class MSetSortCmp).

Sun Apr 02 16:37:38 BST 2006  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Don't perform a name lookup on the IP address
	  which an incoming connection is from as that could easily slow
	  down the search response - instead just print the IP address itself
	  if output is verbose.

Sun Apr 02 13:28:31 BST 2006  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/,docs/remote_protocol.html,
	  matcher/multimatch.cc,matcher/networkmatch.cc,matcher/networkmatch.h,
	  net/socketclient.cc,net/socketserver.cc: Change bool
	  sort_by_relevance to enum sort_by in preparation for adding
	  "sort_by_relevance_then_value".

Fri Mar 31 22:32:16 BST 2006  Olly Betts <olly@survex.com>

	* examples/copydatabase.cc,examples/quest.cc: Add --help and --version
	  options.
	* examples/delve.cc: Tidy up output from --help and --version options.

Fri Mar 31 19:01:25 BST 2006  Olly Betts <olly@survex.com>

	* bin/quartzcheck.cc: Fix SEGV when run with no arguments (introduced
	  by last change).

Fri Mar 31 17:57:27 BST 2006  Olly Betts <olly@survex.com>

	* bin/quartzcheck.cc: Add --version option.  Tidy up output from
	  --help.

Fri Mar 31 17:43:25 BST 2006  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Include --help and --version in --help output.
	* bin/quartzdump.cc: Add --help and --version options.  Terminate list
	  of long options so that "quartzdump --foo" no longer segfaults.

Fri Mar 31 17:27:09 BST 2006  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Tweak --help and --version output for
	  consistency with other binaries.  Terminate list of long options so
	  that "quartzcompact --foo" no longer segfaults.
