@@ -1,3 +1,8 @@
+Tue Apr 04 16:35:58 BST 2006  Olly Betts <olly@survex.com>
+
+	* api/omenquire.cc,include/xapian/enquire.h,matcher/,tests/api_db.cc:
+	  Implement Enquire::set_sort_by_relevance_then_value().
+
 Tue Apr 04 01:05:41 BST 2006  Olly Betts <olly@survex.com>
 
 	* common/omenquireinternal.h: sort_key no longer needs to be mutable
